# AI-Search-Paper

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/dblp/ase/: 2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json
data/dblp/ccs/: 2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json
data/dblp/fse/: 2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json
data/dblp/icse/: 2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json
data/dblp/issta/: 2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json
data/dblp/ndss/: 2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json
data/dblp/sp/: 2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json
data/dblp/uss/: 2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json
data/enriched/ccs/: 2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json
data/sema/ccs/: 2015.json  (+9 more)
scripts/: import_to_notion.py  reorganize_results.py  update_output_files.py
src/: __init__.py
src/engine/: README.md  dblp.py  enrich.py  enrich_missing.py  sema.py  stats.py
src/search/: README.md  __init__.py  ai_query.py  config.py  label.py  utils.py
(+67 files in other folders)
